# Master

.github/workflows/: tests.yml
code/: .gitignore  CMakeLists.txt  README.md  config.h.in  ds_plot.py  measurement_plot.py  performance_measure.sh  vis.py
code/.github/workflows/: tests.yml
code/cmake/: Debug.cmake  Release.cmake  Test.cmake
code/datageneration/: generators.cpp  generators.h  main.cpp  suite_generator.cpp
code/include/: datastructures.h  distance.h  global.h  log.h  queries.h  simplification.h  visualizer.h
code/src/: alt_godau.cpp  datastructures.cpp  distance.cpp  equation_solvers.cpp  global_imai_iri.cpp  imai_iri.cpp  main.cpp  performance_log.cpp  queries.cpp  simplification_advanced.cpp  simplification_simple.cpp  simplification_slow.cpp  suite.cpp  visualizer.cpp
code/test_data/: ag_fail.poly  fail.poly  p0
code/tests/: CMakeLists.txt  alt_godau.cpp  general_functions.cpp  simplification.cpp
colloquium/: bibliography.bib
project/: bibliography.bib  body.tex  main.tex  section_algorithm_implementation.tex  section_equations.tex  section_implicit_algorithm.tex  section_introduction.tex  section_preliminaries.tex  section_related_works.tex
project/algotemplate/: report.cls
project/code/: .gitignore  CMakeLists.txt  README.md  config.h
project/code/cmake/: Debug.cmake  Release.cmake  Test.cmake
project/code/data/: 000.poly  001.poly
project/code/datageneration/: generators.cpp  generators.h  main.cpp
project/code/include/: datastructures.h  distance.h  frechet.h  simplification.h
project/code/src/: alt_godau.cpp  datastructures.cpp  distance.cpp  equation_solvers.cpp  main.cpp  simplification_slow.cpp
project/report/: bibliography.bib  body.tex  main.tex
project/tikz-tex/: alt-godau-implicit-eq-1.tex  chebyshev-algo-1.tex  chebyshev-algo-2.tex  chebyshev-algo-3.tex  chebyshev-algo-4.tex  chebyshev-algo-5.tex  chebyshev-algo-6.tex  poly-ex-123-ag-1.tex  poly-ex-123-ag-4.tex  poly-ex-265-ag-1.tex  poly-ex-265-ag-3.tex  poly-ex-main.tex  restrictions-1.tex  restrictions-2.tex  restrictions-3.tex  solution-kinds-3.tex  solution-kinds-5.tex  solution-kinds-6.tex  solution-kinds-7.tex
sources/: references.bib
thesis/: abstract.tex  bibliography.bib  body.tex  main.tex  makefile  section_conclusion.tex  section_cubic_algorithm.tex  section_dimension_one.tex  section_equations.tex  section_global_imai_iri.tex  section_implicit_algorithm.tex  section_introduction.tex  section_polyline_simplification.tex  section_preliminaries.tex  section_related_works.tex  section_results.tex  section_simple_algorithm.tex  section_simplification_queries.tex
thesis/algotemplate/: thesis.cls
thesis/ipe/: case1.1.ipe  case1.1.ipe.autosave.ipe  case1.2.ipe  case1.2.ipe.autosave.ipe  case1.ipe  case1.ipe.autosave.ipe  case2.2.ipe  case2.2.ipe.autosave.ipe  case2.ipe  polyline.ipe  polyline.ipe.autosave.ipe
thesis/tikz-tex/: alt-godau-implicit-eq-2.tex  alt-godau-implicit-eq-3.tex  chebyshev-algo-3.tex  chebyshev-algo-4.tex  chebyshev-algo-5.tex  chebyshev-algo-6.tex  ex_cell_reachability_statement.tex  ex_cr_globalii.tex  poly-ex-123-ag-2.tex  poly-ex-123-ag-3.tex  poly-ex-265-ag-2.tex  polyline-ex-hausdorff.tex  polyline-ex-local-global-f.tex  restrictions-2.tex  restrictions-3.tex  simpl_init.tex  solution-kinds-1.tex  solution-kinds-2.tex  solution-kinds-4.tex
